# FuzumGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Redirections.h  build debug editor.bat  build debug game.bat  build_release_editor.bat  build_release_game_SETUP_YOUR_ENGINE_LOCATION.bat  clear build folder.bat  clear temp folders.bat  cmake installer (run from admin for set env vaiables).bat  imgui.ini
src/: Base.h  main.cpp
